--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ markdown/Part 03(Talk 09~ 12).md
 markdown/Part 02(Talk 05~ 08).md
 markdown/Part 01(Talk 01~ 04).md
 PDF/REVIEW_01_ignored.pdf
+LaTeX/REVIEW_01/REVIEW_01_ignored.pdf
