Ignore .DS_Store files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ markdown/Part 02(Talk 05~ 08).md
 markdown/Part 01(Talk 01~ 04).md
 PDF/REVIEW_01_ignored.pdf
 LaTeX/REVIEW_01/REVIEW_01_ignored.pdf
+.DS_Store
+docs/.DS_Store
+LaTeX/.DS_Store
+markdown/.DS_Store
