--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-
+# GitHub Page Dependencies 
 markdown/Part 03(Talk 09~ 12).md
 markdown/Part 02(Talk 05~ 08).md
 markdown/Part 01(Talk 01~ 04).md
+
+# PDF Files with Full Permission 
 PDF/REVIEW_01_ignored.pdf
 LaTeX/REVIEW_01/REVIEW_01_ignored.pdf
+
+# macOS System Files
 .DS_Store
 docs/.DS_Store
 LaTeX/.DS_Store
