--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ markdown/Part 03(Talk 09~ 12).md
 markdown/Part 02(Talk 05~ 08).md
 markdown/Part 01(Talk 01~ 04).md
 
+# LaTeX Dependencies
+LaTeX/*/expl3.tex
+LaTeX/*/ltluatex.tex
+LaTeX/*/l.texpadtmp
+
 # PDF Files with Full Permission 
 PDF/REVIEW_01_ignored.pdf
 LaTeX/REVIEW_01/REVIEW_01_ignored.pdf
