Update .gitignore to ignore .texpadtmp file

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ markdown/Part 01(Talk 01~ 04).md
 # LaTeX Dependencies
 LaTeX/REVIEW_01/expl3.tex
 LaTeX/REVIEW_01/ltluatex.tex
-LaTeX/REVIEW_01/l.texpadtmp
+LaTeX/REVIEW_01/.texpadtmp
 
 # PDF Files with Full Permission 
 PDF/REVIEW_01_ignored.pdf
