--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# JetBrains IDE Dependencies
+.idea
+/scripts/.idea
+
 # GitHub Page Dependencies 
 markdown/Part 03(Talk 09~ 12).md
 markdown/Part 02(Talk 05~ 08).md
