--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@
 
 # GitHub Page Dependencies 
 # English Version
+markdown/Review of the course “R for Data Science”.md
 markdown/EN/Part 03(Talk 09~ 12).md
 markdown/EN/Part 02(Talk 05~ 08).md
 markdown/EN/Part 01(Talk 01~ 04).md
 # Chinese Version
+markdown/ Review of the course “R for Data Science”_CN.md
 markdown/CN/Part 03(Talk 09~ 12).md
 markdown/CN/Part 02(Talk 05~ 08).md
 markdown/CN/Part 01(Talk 01~ 04).md
@@ -37,7 +39,7 @@ LaTeX/CN/REVIEW_01/REVIEW_01_ignored.pdf
 docs/.DS_Store
 LaTeX/.DS_Store
 markdown/.DS_Store
-markdown/ Review of the course “R for Data Science”.md
+
 
 
 
