--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 # GitHub Page Dependencies 
 # English Version
 markdown/Review of the course “R for Data Science”.md
-markdown/EN/
+markdown/EN/*
 # Chinese Version
-markdown/ Review of the course “R for Data Science”_CN.md
-markdown/CN/
+markdown/Review of the course “R for Data Science”_CN.md
+markdown/CN/*
 
 # LaTeX Dependencies
 # English Version
@@ -24,10 +24,10 @@ LaTeX/CN/REVIEW_01/texput.log
 
 # PDF Files with Full Permission 
 # English Version
-PDF/EN/REVIEW_01/REVIEW_01_ignored.pdf
+PDF/EN/REVIEW_01_ignored.pdf
 LaTeX/EN/REVIEW_01/REVIEW_01_ignored.pdf
 # Chinese Version
-PDF/CN/REVIEW_01/REVIEW_01_ignored_CN.pdf
+PDF/CN/REVIEW_01_ignored_CN.pdf
 LaTeX/CN/REVIEW_01/REVIEW_01_ignored.pdf
 
 # macOS System Files
